<resources>
    <string name="app_name">StudApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_teachers">Teachers</string>
    <string name="nav_arrears">Arrears</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_settings">Settings</string>

    <string name="actions_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome_to_stud_app">Welcome to StudApp!</string>
    <string name="group_choose">Please, select your group</string>
    <string name="accept">Accept</string>

</resources>
