<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_stud_app"
        style="@style/normalText"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_group_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_choose"
        android:layout_below="@+id/tv_welcome"
        style="@style/smallText"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_group_choose" />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:text="@string/accept"/>

</RelativeLayout>